src/objects/PE_Program_Information__c.object
<CustomObject>
    <description>This Object stores the Track and Purchasing Method information of Partner in MSI SFDC</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Lookup to the Account to which the Program is added</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PE Program Information</relationshipLabel>
        <relationshipName>MPE_Program_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MSI_Program_Information_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores the ID of Program Information from MSI SFDC</description>
        <externalId>true</externalId>
        <label>MSI Program Information ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Partner_Level__c</fullName>
        <description>This Field determines the Partner Level in MSI SFDC</description>
        <label>Partner Level</label>
        <picklist>
            <picklistValues>
                <fullName>Alliance Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorised Wireless Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorized Ind Software Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorized Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorized Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Direct Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elite Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ind Software Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorola Wireless Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorola Wireless Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorola Wireless Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OURO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier Business Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier Gold Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier Ind Software Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier Platinum Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier Silver Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier Solution Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier Super Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <description>This field defines the Partner Type of the Account</description>
        <label>Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>MSP Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1SFW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eTailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPP Dealer Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPP Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2SR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Country Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1SR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1SMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2SFW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counter Sales Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ind Software Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>分销商</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchasing_Method__c</fullName>
        <label>Purchasing Method</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <description>Stores the Program to which the Account is associated with</description>
        <label>Track</label>
        <picklist>
            <picklistValues>
                <fullName>Mobility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WNS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PE Program Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PE Program Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PE Program Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>